Assignment3/A3/Spin/Src6.4.6/y.output
Terminals which are not used

   PREPROC
   MTYPE
   LABEL
   NON_ATOMIC


Grammar

    0 $accept: program $end

    1 program: units

    2 units: unit
    3      | units unit

    4 unit: proc
    5     | init
    6     | claim
    7     | ltl
    8     | events
    9     | one_decl
   10     | utype
   11     | c_fcts
   12     | ns
   13     | semi
   14     | error

   15 l_par: '('

   16 r_par: ')'

   17 @1: /* empty */

   18 @2: /* empty */

   19 proc: inst proctype NAME @1 l_par decl r_par @2 Opt_priority Opt_enabler body

   20 proctype: PROCTYPE
   21         | D_PROCTYPE

   22 inst: /* empty */
   23     | ACTIVE
   24     | ACTIVE '[' const_expr ']'
   25     | ACTIVE '[' NAME ']'

   26 @3: /* empty */

   27 init: INIT @3 Opt_priority body

   28 @4: /* empty */

   29 ltl: LTL optname2 @4 ltl_body

   30 ltl_body: '{' full_expr OS '}'
   31         | error

   32 @5: /* empty */

   33 claim: CLAIM optname @5 body

   34 optname: /* empty */
   35        | NAME

   36 optname2: /* empty */
   37         | NAME

   38 @6: /* empty */

   39 events: TRACE @6 body

   40 @7: /* empty */

   41 utype: TYPEDEF NAME '{' @7 decl_lst '}'

   42 nm: NAME
   43   | INAME

   44 @8: /* empty */

   45 ns: INLINE nm l_par @8 args r_par

   46 c_fcts: ccode
   47       | cstate

   48 cstate: C_STATE STRING STRING
   49       | C_TRACK STRING STRING
   50       | C_STATE STRING STRING STRING
   51       | C_TRACK STRING STRING STRING

   52 ccode: C_CODE
   53      | C_DECL

   54 cexpr: C_EXPR

   55 @9: /* empty */

   56 @10: /* empty */

   57 body: '{' @9 sequence OS @10 '}'

   58 sequence: step
   59         | sequence MS step

   60 step: one_decl
   61     | XU vref_lst
   62     | NAME ':' one_decl
   63     | NAME ':' XU
   64     | stmnt

   65 @11: /* empty */

   66 step: stmnt UNLESS @11 stmnt

   67 vis: /* empty */
   68    | HIDDEN
   69    | SHOW
   70    | ISLOCAL

   71 asgn: /* empty */
   72     | ASGN

   73 one_decl: vis TYPE var_list
   74         | vis UNAME var_list
   75         | vis TYPE asgn '{' nlst '}'

   76 decl_lst: one_decl
   77         | one_decl SEMI decl_lst

   78 decl: /* empty */
   79     | decl_lst

   80 vref_lst: varref
   81         | varref ',' vref_lst

   82 var_list: ivar
   83         | ivar ',' var_list

   84 c_list: CONST
   85       | CONST ',' c_list

   86 ivar: vardcl
   87     | vardcl ASGN '{' c_list '}'
   88     | vardcl ASGN expr
   89     | vardcl ASGN ch_init

   90 ch_init: '[' const_expr ']' OF '{' typ_list '}'

   91 vardcl: NAME
   92       | NAME ':' CONST
   93       | NAME '[' const_expr ']'
   94       | NAME '[' NAME ']'

   95 varref: cmpnd

   96 pfld: NAME

   97 @12: /* empty */

   98 pfld: NAME @12 '[' expr ']'

   99 @13: /* empty */

  100 cmpnd: pfld @13 sfld

  101 sfld: /* empty */
  102     | '.' cmpnd

  103 stmnt: Special
  104      | Stmnt

  105 @14: /* empty */

  106 for_pre: FOR l_par @14 varref

  107 for_post: '{' sequence OS '}'

  108 @15: /* empty */

  109 Special: varref RCV @15 rargs

  110 @16: /* empty */

  111 Special: varref SND @16 margs

  112 @17: /* empty */

  113 Special: for_pre ':' expr DOTDOT expr r_par @17 for_post

  114 @18: /* empty */

  115 Special: for_pre IN varref r_par @18 for_post
  116        | SELECT l_par varref ':' expr DOTDOT expr r_par
  117        | IF options FI

  118 @19: /* empty */

  119 Special: DO @19 options OD
  120        | BREAK
  121        | GOTO NAME
  122        | NAME ':' stmnt
  123        | NAME ':'
  124        | error

  125 Stmnt: varref ASGN full_expr
  126      | varref INCR
  127      | varref DECR
  128      | SET_P l_par two_args r_par

  129 @20: /* empty */

  130 Stmnt: PRINT l_par STRING @20 prargs r_par
  131      | PRINTM l_par varref r_par
  132      | PRINTM l_par CONST r_par
  133      | ASSERT full_expr
  134      | ccode

  135 @21: /* empty */

  136 Stmnt: varref R_RCV @21 rargs

  137 @22: /* empty */

  138 Stmnt: varref RCV @22 LT rargs GT

  139 @23: /* empty */

  140 Stmnt: varref R_RCV @23 LT rargs GT

  141 @24: /* empty */

  142 Stmnt: varref O_SND @24 margs
  143      | full_expr
  144      | ELSE

  145 @25: /* empty */

  146 Stmnt: ATOMIC '{' @25 sequence OS '}'

  147 @26: /* empty */

  148 Stmnt: D_STEP '{' @26 sequence OS '}'

  149 @27: /* empty */

  150 Stmnt: '{' @27 sequence OS '}'

  151 @28: /* empty */

  152 @29: /* empty */

  153 Stmnt: INAME @28 l_par args r_par @29 Stmnt

  154 @30: /* empty */

  155 @31: /* empty */

  156 Stmnt: varref ASGN INAME @30 l_par args r_par @31 Stmnt
  157      | RETURN full_expr

  158 options: option
  159        | option options

  160 @32: /* empty */

  161 option: SEP @32 sequence OS

  162 OS: /* empty */
  163   | semi

  164 semi: SEMI
  165     | ARROW

  166 MS: semi
  167   | MS semi

  168 aname: NAME
  169      | PNAME

  170 const_expr: CONST
  171           | '-' const_expr
  172           | l_par const_expr r_par
  173           | const_expr '+' const_expr
  174           | const_expr '-' const_expr
  175           | const_expr '*' const_expr
  176           | const_expr '/' const_expr
  177           | const_expr '%' const_expr

  178 expr: l_par expr r_par
  179     | expr '+' expr
  180     | expr '-' expr
  181     | expr '*' expr
  182     | expr '/' expr
  183     | expr '%' expr
  184     | expr '&' expr
  185     | expr '^' expr
  186     | expr '|' expr
  187     | expr GT expr
  188     | expr LT expr
  189     | expr GE expr
  190     | expr LE expr
  191     | expr EQ expr
  192     | expr NE expr
  193     | expr AND expr
  194     | expr OR expr
  195     | expr LSHIFT expr
  196     | expr RSHIFT expr
  197     | '~' expr
  198     | '-' expr
  199     | SND expr
  200     | l_par expr ARROW expr ':' expr r_par

  201 @33: /* empty */

  202 expr: RUN aname @33 l_par args r_par Opt_priority
  203     | LEN l_par varref r_par
  204     | ENABLED l_par expr r_par
  205     | GET_P l_par expr r_par

  206 @34: /* empty */

  207 expr: varref RCV @34 '[' rargs ']'

  208 @35: /* empty */

  209 expr: varref R_RCV @35 '[' rargs ']'
  210     | varref
  211     | cexpr
  212     | CONST
  213     | TIMEOUT
  214     | NONPROGRESS
  215     | PC_VAL l_par expr r_par
  216     | PNAME '[' expr ']' '@' NAME
  217     | PNAME '[' expr ']' ':' pfld
  218     | PNAME '@' NAME
  219     | PNAME ':' pfld
  220     | ltl_expr

  221 Opt_priority: /* empty */
  222             | PRIORITY CONST

  223 full_expr: expr
  224          | Expr

  225 ltl_expr: expr UNTIL expr
  226         | expr RELEASE expr
  227         | expr WEAK_UNTIL expr
  228         | expr IMPLIES expr
  229         | expr EQUIV expr
  230         | NEXT expr
  231         | ALWAYS expr
  232         | EVENTUALLY expr

  233 Expr: Probe
  234     | l_par Expr r_par
  235     | Expr AND Expr
  236     | Expr AND expr
  237     | expr AND Expr
  238     | Expr OR Expr
  239     | Expr OR expr
  240     | expr OR Expr

  241 Probe: FULL l_par varref r_par
  242      | NFULL l_par varref r_par
  243      | EMPTY l_par varref r_par
  244      | NEMPTY l_par varref r_par

  245 Opt_enabler: /* empty */
  246            | PROVIDED l_par full_expr r_par
  247            | PROVIDED error

  248 basetype: TYPE
  249         | UNAME
  250         | error

  251 typ_list: basetype
  252         | basetype ',' typ_list

  253 two_args: expr ',' expr

  254 args: /* empty */
  255     | arg

  256 prargs: /* empty */
  257       | ',' arg

  258 margs: arg
  259      | expr l_par arg r_par

  260 arg: expr
  261    | expr ',' arg

  262 rarg: varref
  263     | EVAL l_par expr r_par
  264     | CONST
  265     | '-' CONST

  266 rargs: rarg
  267      | rarg ',' rargs
  268      | rarg l_par rargs r_par
  269      | l_par rargs r_par

  270 nlst: NAME
  271     | nlst NAME
  272     | nlst ','


Terminals, with rules where they appear

$end (0) 0
'%' (37) 177 183
'&' (38) 184
'(' (40) 15
')' (41) 16
'*' (42) 175 181
'+' (43) 173 179
',' (44) 81 83 85 252 253 257 261 267 272
'-' (45) 171 174 180 198 265
'.' (46) 102
'/' (47) 176 182
':' (58) 62 63 92 113 116 122 123 200 217 219
'@' (64) 216 218
'[' (91) 24 25 90 93 94 98 207 209 216 217
']' (93) 24 25 90 93 94 98 207 209 216 217
'^' (94) 185
'{' (123) 30 41 57 75 87 90 107 146 148 150
'|' (124) 186
'}' (125) 30 41 57 75 87 90 107 146 148 150
'~' (126) 197
error (256) 14 31 124 247 250
ASSERT (258) 133
PRINT (259) 130
PRINTM (260) 131 132
PREPROC (261)
C_CODE (262) 52
C_DECL (263) 53
C_EXPR (264) 54
C_STATE (265) 48 50
C_TRACK (266) 49 51
RUN (267) 202
LEN (268) 203
ENABLED (269) 204
SET_P (270) 128
GET_P (271) 205
EVAL (272) 263
PC_VAL (273) 215
TYPEDEF (274) 41
MTYPE (275)
INLINE (276) 45
RETURN (277) 157
LABEL (278)
OF (279) 90
GOTO (280) 121
BREAK (281) 120
ELSE (282) 144
SEMI (283) 77 164
ARROW (284) 165 200
IF (285) 117
FI (286) 117
DO (287) 119
OD (288) 119
FOR (289) 106
SELECT (290) 116
IN (291) 115
SEP (292) 161
DOTDOT (293) 113 116
ATOMIC (294) 146
NON_ATOMIC (295)
D_STEP (296) 148
UNLESS (297) 66
TIMEOUT (298) 213
NONPROGRESS (299) 214
ACTIVE (300) 23 24 25
PROCTYPE (301) 20
D_PROCTYPE (302) 21
HIDDEN (303) 68
SHOW (304) 69
ISLOCAL (305) 70
PRIORITY (306) 222
PROVIDED (307) 246 247
FULL (308) 241
EMPTY (309) 243
NFULL (310) 242
NEMPTY (311) 244
CONST (312) 84 85 92 132 170 212 222 264 265
TYPE (313) 73 75 248
XU (314) 61 63
NAME (315) 19 25 35 37 41 42 62 63 91 92 93 94 96 98 121 122 123 168
    216 218 270 271
UNAME (316) 74 249
PNAME (317) 169 216 217 218 219
INAME (318) 43 153 156
STRING (319) 48 49 50 51 130
CLAIM (320) 33
TRACE (321) 39
INIT (322) 27
LTL (323) 29
ASGN (324) 72 87 88 89 125 156
R_RCV (325) 136 140 209
RCV (326) 109 138 207
O_SND (327) 142
SND (328) 111 199
EQUIV (329) 229
IMPLIES (330) 228
OR (331) 194 238 239 240
AND (332) 193 235 236 237
EVENTUALLY (333) 232
ALWAYS (334) 231
RELEASE (335) 226
WEAK_UNTIL (336) 227
UNTIL (337) 225
NEXT (338) 230
NE (339) 192
EQ (340) 191
LE (341) 190
GE (342) 189
LT (343) 138 140 188
GT (344) 138 140 187
RSHIFT (345) 196
LSHIFT (346) 195
DECR (347) 127
INCR (348) 126
NEG (349)
UMIN (350)
DOT (351)


Nonterminals, with rules where they appear

$accept (116)
    on left: 0
program (117)
    on left: 1, on right: 0
units (118)
    on left: 2 3, on right: 1 3
unit (119)
    on left: 4 5 6 7 8 9 10 11 12 13 14, on right: 2 3
l_par (120)
    on left: 15, on right: 19 45 106 116 128 130 131 132 153 156 172
    178 200 202 203 204 205 215 234 241 242 243 244 246 259 263 268
    269
r_par (121)
    on left: 16, on right: 19 45 113 115 116 128 130 131 132 153 156
    172 178 200 202 203 204 205 215 234 241 242 243 244 246 259 263
    268 269
proc (122)
    on left: 19, on right: 4
@1 (123)
    on left: 17, on right: 19
@2 (124)
    on left: 18, on right: 19
proctype (125)
    on left: 20 21, on right: 19
inst (126)
    on left: 22 23 24 25, on right: 19
init (127)
    on left: 27, on right: 5
@3 (128)
    on left: 26, on right: 27
ltl (129)
    on left: 29, on right: 7
@4 (130)
    on left: 28, on right: 29
ltl_body (131)
    on left: 30 31, on right: 29
claim (132)
    on left: 33, on right: 6
@5 (133)
    on left: 32, on right: 33
optname (134)
    on left: 34 35, on right: 33
optname2 (135)
    on left: 36 37, on right: 29
events (136)
    on left: 39, on right: 8
@6 (137)
    on left: 38, on right: 39
utype (138)
    on left: 41, on right: 10
@7 (139)
    on left: 40, on right: 41
nm (140)
    on left: 42 43, on right: 45
ns (141)
    on left: 45, on right: 12
@8 (142)
    on left: 44, on right: 45
c_fcts (143)
    on left: 46 47, on right: 11
cstate (144)
    on left: 48 49 50 51, on right: 47
ccode (145)
    on left: 52 53, on right: 46 134
cexpr (146)
    on left: 54, on right: 211
body (147)
    on left: 57, on right: 19 27 33 39
@9 (148)
    on left: 55, on right: 57
@10 (149)
    on left: 56, on right: 57
sequence (150)
    on left: 58 59, on right: 57 59 107 146 148 150 161
step (151)
    on left: 60 61 62 63 64 66, on right: 58 59
@11 (152)
    on left: 65, on right: 66
vis (153)
    on left: 67 68 69 70, on right: 73 74 75
asgn (154)
    on left: 71 72, on right: 75
one_decl (155)
    on left: 73 74 75, on right: 9 60 62 76 77
decl_lst (156)
    on left: 76 77, on right: 41 77 79
decl (157)
    on left: 78 79, on right: 19
vref_lst (158)
    on left: 80 81, on right: 61 81
var_list (159)
    on left: 82 83, on right: 73 74 83
c_list (160)
    on left: 84 85, on right: 85 87
ivar (161)
    on left: 86 87 88 89, on right: 82 83
ch_init (162)
    on left: 90, on right: 89
vardcl (163)
    on left: 91 92 93 94, on right: 86 87 88 89
varref (164)
    on left: 95, on right: 80 81 106 109 111 115 116 125 126 127 131
    136 138 140 142 156 203 207 209 210 241 242 243 244 262
pfld (165)
    on left: 96 98, on right: 100 217 219
@12 (166)
    on left: 97, on right: 98
cmpnd (167)
    on left: 100, on right: 95 102
@13 (168)
    on left: 99, on right: 100
sfld (169)
    on left: 101 102, on right: 100
stmnt (170)
    on left: 103 104, on right: 64 66 122
for_pre (171)
    on left: 106, on right: 113 115
@14 (172)
    on left: 105, on right: 106
for_post (173)
    on left: 107, on right: 113 115
Special (174)
    on left: 109 111 113 115 116 117 119 120 121 122 123 124,
    on right: 103
@15 (175)
    on left: 108, on right: 109
@16 (176)
    on left: 110, on right: 111
@17 (177)
    on left: 112, on right: 113
@18 (178)
    on left: 114, on right: 115
@19 (179)
    on left: 118, on right: 119
Stmnt (180)
    on left: 125 126 127 128 130 131 132 133 134 136 138 140 142 143
    144 146 148 150 153 156 157, on right: 104 153 156
@20 (181)
    on left: 129, on right: 130
@21 (182)
    on left: 135, on right: 136
@22 (183)
    on left: 137, on right: 138
@23 (184)
    on left: 139, on right: 140
@24 (185)
    on left: 141, on right: 142
@25 (186)
    on left: 145, on right: 146
@26 (187)
    on left: 147, on right: 148
@27 (188)
    on left: 149, on right: 150
@28 (189)
    on left: 151, on right: 153
@29 (190)
    on left: 152, on right: 153
@30 (191)
    on left: 154, on right: 156
@31 (192)
    on left: 155, on right: 156
options (193)
    on left: 158 159, on right: 117 119 159
option (194)
    on left: 161, on right: 158 159
@32 (195)
    on left: 160, on right: 161
OS (196)
    on left: 162 163, on right: 30 57 107 146 148 150 161
semi (197)
    on left: 164 165, on right: 13 163 166 167
MS (198)
    on left: 166 167, on right: 59 167
aname (199)
    on left: 168 169, on right: 202
const_expr (200)
    on left: 170 171 172 173 174 175 176 177, on right: 24 90 93 171
    172 173 174 175 176 177
expr (201)
    on left: 178 179 180 181 182 183 184 185 186 187 188 189 190 191
    192 193 194 195 196 197 198 199 200 202 203 204 205 207 209 210
    211 212 213 214 215 216 217 218 219 220, on right: 88 98 113 116
    178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193
    194 195 196 197 198 199 200 204 205 215 216 217 223 225 226 227
    228 229 230 231 232 236 237 239 240 253 259 260 261 263
@33 (202)
    on left: 201, on right: 202
@34 (203)
    on left: 206, on right: 207
@35 (204)
    on left: 208, on right: 209
Opt_priority (205)
    on left: 221 222, on right: 19 27 202
full_expr (206)
    on left: 223 224, on right: 30 125 133 143 157 246
ltl_expr (207)
    on left: 225 226 227 228 229 230 231 232, on right: 220
Expr (208)
    on left: 233 234 235 236 237 238 239 240, on right: 224 234 235
    236 237 238 239 240
Probe (209)
    on left: 241 242 243 244, on right: 233
Opt_enabler (210)
    on left: 245 246 247, on right: 19
basetype (211)
    on left: 248 249 250, on right: 251 252
typ_list (212)
    on left: 251 252, on right: 90 252
two_args (213)
    on left: 253, on right: 128
args (214)
    on left: 254 255, on right: 45 153 156 202
prargs (215)
    on left: 256 257, on right: 130
margs (216)
    on left: 258 259, on right: 111 142
arg (217)
    on left: 260 261, on right: 255 257 258 259 261
rarg (218)
    on left: 262 263 264 265, on right: 266 267 268
rargs (219)
    on left: 266 267 268 269, on right: 109 136 138 140 207 209 267
    268 269
nlst (220)
    on left: 270 271 272, on right: 75 271 272


state 0

    0 $accept: . program $end

    error    shift, and go to state 1
    C_CODE   shift, and go to state 2
    C_DECL   shift, and go to state 3
    C_STATE  shift, and go to state 4
    C_TRACK  shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    INLINE   shift, and go to state 7
    SEMI     shift, and go to state 8
    ARROW    shift, and go to state 9
    ACTIVE   shift, and go to state 10
    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13
    CLAIM    shift, and go to state 14
    TRACE    shift, and go to state 15
    INIT     shift, and go to state 16
    LTL      shift, and go to state 17

    PROCTYPE    reduce using rule 22 (inst)
    D_PROCTYPE  reduce using rule 22 (inst)
    TYPE        reduce using rule 67 (vis)
    UNAME       reduce using rule 67 (vis)

    program   go to state 18
    units     go to state 19
    unit      go to state 20
    proc      go to state 21
    inst      go to state 22
    init      go to state 23
    ltl       go to state 24
    claim     go to state 25
    events    go to state 26
    utype     go to state 27
    ns        go to state 28
    c_fcts    go to state 29
    cstate    go to state 30
    ccode     go to state 31
    vis       go to state 32
    one_decl  go to state 33
    semi      go to state 34


state 1

   14 unit: error .

    $default  reduce using rule 14 (unit)


state 2

   52 ccode: C_CODE .

    $default  reduce using rule 52 (ccode)


state 3

   53 ccode: C_DECL .

    $default  reduce using rule 53 (ccode)


state 4

   48 cstate: C_STATE . STRING STRING
   50       | C_STATE . STRING STRING STRING

    STRING  shift, and go to state 35


state 5

   49 cstate: C_TRACK . STRING STRING
   51       | C_TRACK . STRING STRING STRING

    STRING  shift, and go to state 36


state 6

   41 utype: TYPEDEF . NAME '{' @7 decl_lst '}'

    NAME  shift, and go to state 37


state 7

   45 ns: INLINE . nm l_par @8 args r_par

    NAME   shift, and go to state 38
    INAME  shift, and go to state 39

    nm  go to state 40


state 8

  164 semi: SEMI .

    $default  reduce using rule 164 (semi)


state 9

  165 semi: ARROW .

    $default  reduce using rule 165 (semi)


state 10

   23 inst: ACTIVE .
   24     | ACTIVE . '[' const_expr ']'
   25     | ACTIVE . '[' NAME ']'

    '['  shift, and go to state 41

    $default  reduce using rule 23 (inst)


state 11

   68 vis: HIDDEN .

    $default  reduce using rule 68 (vis)


state 12

   69 vis: SHOW .

    $default  reduce using rule 69 (vis)


state 13

   70 vis: ISLOCAL .

    $default  reduce using rule 70 (vis)


state 14

   33 claim: CLAIM . optname @5 body

    NAME  shift, and go to state 42

    $default  reduce using rule 34 (optname)

    optname  go to state 43


state 15

   39 events: TRACE . @6 body

    $default  reduce using rule 38 (@6)

    @6  go to state 44


state 16

   27 init: INIT . @3 Opt_priority body

    $default  reduce using rule 26 (@3)

    @3  go to state 45


state 17

   29 ltl: LTL . optname2 @4 ltl_body

    NAME  shift, and go to state 46

    $default  reduce using rule 36 (optname2)

    optname2  go to state 47


state 18

    0 $accept: program . $end

    $end  shift, and go to state 48


state 19

    1 program: units .
    3 units: units . unit

    error    shift, and go to state 1
    C_CODE   shift, and go to state 2
    C_DECL   shift, and go to state 3
    C_STATE  shift, and go to state 4
    C_TRACK  shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    INLINE   shift, and go to state 7
    SEMI     shift, and go to state 8
    ARROW    shift, and go to state 9
    ACTIVE   shift, and go to state 10
    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13
    CLAIM    shift, and go to state 14
    TRACE    shift, and go to state 15
    INIT     shift, and go to state 16
    LTL      shift, and go to state 17

    $end        reduce using rule 1 (program)
    PROCTYPE    reduce using rule 22 (inst)
    D_PROCTYPE  reduce using rule 22 (inst)
    TYPE        reduce using rule 67 (vis)
    UNAME       reduce using rule 67 (vis)

    unit      go to state 49
    proc      go to state 21
    inst      go to state 22
    init      go to state 23
    ltl       go to state 24
    claim     go to state 25
    events    go to state 26
    utype     go to state 27
    ns        go to state 28
    c_fcts    go to state 29
    cstate    go to state 30
    ccode     go to state 31
    vis       go to state 32
    one_decl  go to state 33
    semi      go to state 34


state 20

    2 units: unit .

    $default  reduce using rule 2 (units)


state 21

    4 unit: proc .

    $default  reduce using rule 4 (unit)


state 22

   19 proc: inst . proctype NAME @1 l_par decl r_par @2 Opt_priority Opt_enabler body

    PROCTYPE    shift, and go to state 50
    D_PROCTYPE  shift, and go to state 51

    proctype  go to state 52


state 23

    5 unit: init .

    $default  reduce using rule 5 (unit)


state 24

    7 unit: ltl .

    $default  reduce using rule 7 (unit)


state 25

    6 unit: claim .

    $default  reduce using rule 6 (unit)


state 26

    8 unit: events .

    $default  reduce using rule 8 (unit)


state 27

   10 unit: utype .

    $default  reduce using rule 10 (unit)


state 28

   12 unit: ns .

    $default  reduce using rule 12 (unit)


state 29

   11 unit: c_fcts .

    $default  reduce using rule 11 (unit)


state 30

   47 c_fcts: cstate .

    $default  reduce using rule 47 (c_fcts)


state 31

   46 c_fcts: ccode .

    $default  reduce using rule 46 (c_fcts)


state 32

   73 one_decl: vis . TYPE var_list
   74         | vis . UNAME var_list
   75         | vis . TYPE asgn '{' nlst '}'

    TYPE   shift, and go to state 53
    UNAME  shift, and go to state 54


state 33

    9 unit: one_decl .

    $default  reduce using rule 9 (unit)


state 34

   13 unit: semi .

    $default  reduce using rule 13 (unit)


state 35

   48 cstate: C_STATE STRING . STRING
   50       | C_STATE STRING . STRING STRING

    STRING  shift, and go to state 55


state 36

   49 cstate: C_TRACK STRING . STRING
   51       | C_TRACK STRING . STRING STRING

    STRING  shift, and go to state 56


state 37

   41 utype: TYPEDEF NAME . '{' @7 decl_lst '}'

    '{'  shift, and go to state 57


state 38

   42 nm: NAME .

    $default  reduce using rule 42 (nm)


state 39

   43 nm: INAME .

    $default  reduce using rule 43 (nm)


state 40

   45 ns: INLINE nm . l_par @8 args r_par

    '('  shift, and go to state 58

    l_par  go to state 59


state 41

   24 inst: ACTIVE '[' . const_expr ']'
   25     | ACTIVE '[' . NAME ']'

    CONST  shift, and go to state 60
    NAME   shift, and go to state 61
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 64


state 42

   35 optname: NAME .

    $default  reduce using rule 35 (optname)


state 43

   33 claim: CLAIM optname . @5 body

    $default  reduce using rule 32 (@5)

    @5  go to state 65


state 44

   39 events: TRACE @6 . body

    '{'  shift, and go to state 66

    body  go to state 67


state 45

   27 init: INIT @3 . Opt_priority body

    PRIORITY  shift, and go to state 68

    $default  reduce using rule 221 (Opt_priority)

    Opt_priority  go to state 69


state 46

   37 optname2: NAME .

    $default  reduce using rule 37 (optname2)


state 47

   29 ltl: LTL optname2 . @4 ltl_body

    $default  reduce using rule 28 (@4)

    @4  go to state 70


state 48

    0 $accept: program $end .

    $default  accept


state 49

    3 units: units unit .

    $default  reduce using rule 3 (units)


state 50

   20 proctype: PROCTYPE .

    $default  reduce using rule 20 (proctype)


state 51

   21 proctype: D_PROCTYPE .

    $default  reduce using rule 21 (proctype)


state 52

   19 proc: inst proctype . NAME @1 l_par decl r_par @2 Opt_priority Opt_enabler body

    NAME  shift, and go to state 71


state 53

   73 one_decl: vis TYPE . var_list
   75         | vis TYPE . asgn '{' nlst '}'

    NAME  shift, and go to state 72
    ASGN  shift, and go to state 73

    $default  reduce using rule 71 (asgn)

    asgn      go to state 74
    var_list  go to state 75
    ivar      go to state 76
    vardcl    go to state 77


state 54

   74 one_decl: vis UNAME . var_list

    NAME  shift, and go to state 72

    var_list  go to state 78
    ivar      go to state 76
    vardcl    go to state 77


state 55

   48 cstate: C_STATE STRING STRING .
   50       | C_STATE STRING STRING . STRING

    STRING  shift, and go to state 79

    $default  reduce using rule 48 (cstate)


state 56

   49 cstate: C_TRACK STRING STRING .
   51       | C_TRACK STRING STRING . STRING

    STRING  shift, and go to state 80

    $default  reduce using rule 49 (cstate)


state 57

   41 utype: TYPEDEF NAME '{' . @7 decl_lst '}'

    $default  reduce using rule 40 (@7)

    @7  go to state 81


state 58

   15 l_par: '(' .

    $default  reduce using rule 15 (l_par)


state 59

   45 ns: INLINE nm l_par . @8 args r_par

    $default  reduce using rule 44 (@8)

    @8  go to state 82


state 60

  170 const_expr: CONST .

    $default  reduce using rule 170 (const_expr)


state 61

   25 inst: ACTIVE '[' NAME . ']'

    ']'  shift, and go to state 83


state 62

  171 const_expr: '-' . const_expr

    CONST  shift, and go to state 60
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 84


state 63

  172 const_expr: l_par . const_expr r_par

    CONST  shift, and go to state 60
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 85


state 64

   24 inst: ACTIVE '[' const_expr . ']'
  173 const_expr: const_expr . '+' const_expr
  174           | const_expr . '-' const_expr
  175           | const_expr . '*' const_expr
  176           | const_expr . '/' const_expr
  177           | const_expr . '%' const_expr

    '+'  shift, and go to state 86
    '-'  shift, and go to state 87
    '*'  shift, and go to state 88
    '/'  shift, and go to state 89
    '%'  shift, and go to state 90
    ']'  shift, and go to state 91


state 65

   33 claim: CLAIM optname @5 . body

    '{'  shift, and go to state 66

    body  go to state 92


state 66

   57 body: '{' . @9 sequence OS @10 '}'

    $default  reduce using rule 55 (@9)

    @9  go to state 93


state 67

   39 events: TRACE @6 body .

    $default  reduce using rule 39 (events)


state 68

  222 Opt_priority: PRIORITY . CONST

    CONST  shift, and go to state 94


state 69

   27 init: INIT @3 Opt_priority . body

    '{'  shift, and go to state 66

    body  go to state 95


state 70

   29 ltl: LTL optname2 @4 . ltl_body

    error  shift, and go to state 96
    '{'    shift, and go to state 97

    ltl_body  go to state 98


state 71

   19 proc: inst proctype NAME . @1 l_par decl r_par @2 Opt_priority Opt_enabler body

    $default  reduce using rule 17 (@1)

    @1  go to state 99


state 72

   91 vardcl: NAME .
   92       | NAME . ':' CONST
   93       | NAME . '[' const_expr ']'
   94       | NAME . '[' NAME ']'

    '['  shift, and go to state 100
    ':'  shift, and go to state 101

    $default  reduce using rule 91 (vardcl)


state 73

   72 asgn: ASGN .

    $default  reduce using rule 72 (asgn)


state 74

   75 one_decl: vis TYPE asgn . '{' nlst '}'

    '{'  shift, and go to state 102


state 75

   73 one_decl: vis TYPE var_list .

    $default  reduce using rule 73 (one_decl)


state 76

   82 var_list: ivar .
   83         | ivar . ',' var_list

    ','  shift, and go to state 103

    $default  reduce using rule 82 (var_list)


state 77

   86 ivar: vardcl .
   87     | vardcl . ASGN '{' c_list '}'
   88     | vardcl . ASGN expr
   89     | vardcl . ASGN ch_init

    ASGN  shift, and go to state 104

    $default  reduce using rule 86 (ivar)


state 78

   74 one_decl: vis UNAME var_list .

    $default  reduce using rule 74 (one_decl)


state 79

   50 cstate: C_STATE STRING STRING STRING .

    $default  reduce using rule 50 (cstate)


state 80

   51 cstate: C_TRACK STRING STRING STRING .

    $default  reduce using rule 51 (cstate)


state 81

   41 utype: TYPEDEF NAME '{' @7 . decl_lst '}'

    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13

    $default  reduce using rule 67 (vis)

    vis       go to state 32
    one_decl  go to state 105
    decl_lst  go to state 106


state 82

   45 ns: INLINE nm l_par @8 . args r_par

    C_EXPR       shift, and go to state 107
    RUN          shift, and go to state 108
    LEN          shift, and go to state 109
    ENABLED      shift, and go to state 110
    GET_P        shift, and go to state 111
    PC_VAL       shift, and go to state 112
    TIMEOUT      shift, and go to state 113
    NONPROGRESS  shift, and go to state 114
    CONST        shift, and go to state 115
    NAME         shift, and go to state 116
    PNAME        shift, and go to state 117
    SND          shift, and go to state 118
    EVENTUALLY   shift, and go to state 119
    ALWAYS       shift, and go to state 120
    NEXT         shift, and go to state 121
    '-'          shift, and go to state 122
    '~'          shift, and go to state 123
    '('          shift, and go to state 58

    $default  reduce using rule 254 (args)

    l_par     go to state 124
    cexpr     go to state 125
    varref    go to state 126
    pfld      go to state 127
    cmpnd     go to state 128
    expr      go to state 129
    ltl_expr  go to state 130
    args      go to state 131
    arg       go to state 132


state 83

   25 inst: ACTIVE '[' NAME ']' .

    $default  reduce using rule 25 (inst)


state 84

  171 const_expr: '-' const_expr .
  173           | const_expr . '+' const_expr
  174           | const_expr . '-' const_expr
  175           | const_expr . '*' const_expr
  176           | const_expr . '/' const_expr
  177           | const_expr . '%' const_expr

    $default  reduce using rule 171 (const_expr)


state 85

  172 const_expr: l_par const_expr . r_par
  173           | const_expr . '+' const_expr
  174           | const_expr . '-' const_expr
  175           | const_expr . '*' const_expr
  176           | const_expr . '/' const_expr
  177           | const_expr . '%' const_expr

    '+'  shift, and go to state 86
    '-'  shift, and go to state 87
    '*'  shift, and go to state 88
    '/'  shift, and go to state 89
    '%'  shift, and go to state 90
    ')'  shift, and go to state 133

    r_par  go to state 134


state 86

  173 const_expr: const_expr '+' . const_expr

    CONST  shift, and go to state 60
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 135


state 87
